# GoogleTest_AppAnalyser

./: CMakeLists.txt  README.md  main.cpp
test/: CMakeLists.txt  TestApp.cpp  TestFunctions.h
